--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Godot 4+ specific ignores
 .godot/
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+!*.code-workspace
